# specs

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  .travis.yml  01_intro.html  02_hello_world.html  03_dispatcher.html  04_resources.html  05_storages.html  06_system_data.html  07_setup.html  08_join.html  09_parallel_join.html  10_rendering.html  11_advanced_component.html  12_tracked.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  bors.toml  clippy.toml  codecov.yml  deny.toml  index.html  miri.sh  netlify.toml  print.html  searchindex.js  searchindex.json
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deny.yml  website.yml
benches/: benches.rs  benches_main.rs  big_or_small.rs  parallel.rs  storage.rs  storage_cmp.rs  storage_perf.rs  storage_sparse.rs  world.rs
book/: book.toml
book/src/: 01_intro.md  02_hello_world.md  03_dispatcher.md  04_resources.md  05_storages.md  06_system_data.md  07_join.md  07_parallel_join.md  07_setup.md  08_join.md  08_parallel_join.md  08_rendering.md  09_parallel_join.md  09_rendering.md  10_rendering.md  11_advanced_component.md  12_tracked.md  13_troubleshooting.md  SUMMARY.md
docs/public/reference/: 01_system.html  index.html  intro.html  print.html  searchindex.js  searchindex.json
docs/public/tutorials/: 01_intro.html  02_hello_world.html  03_dispatcher.html  04_resources.html  05_storages.html  06_system_data.html  07_setup.html  08_join.html  09_parallel_join.html  10_rendering.html  11_advanced_component.html  12_tracked.html  index.html  print.html  searchindex.js  searchindex.json
docs/reference/: book.toml
docs/reference/src/: 01_system.md  SUMMARY.md  intro.md
docs/tutorials/: book.toml
docs/tutorials/src/: 01_intro.md  02_hello_world.md  03_dispatcher.md  04_resources.md  05_storages.md  06_system_data.md  07_setup.md  08_join.md  10_rendering.md  11_advanced_component.md  12_tracked.md  13_saveload.md  14_troubleshooting.md  SUMMARY.md
docs/website/: config.toml
docs/website/content/: _index.md  specs-0.15.md
docs/website/content/pages/: about.md  docs.md
docs/website/themes/even/: README.md  config.toml  theme.toml
docs/website/themes/even/content/: Theme_Overview.md  eigth_post.md  fifth_post.md  first_post.md  fourth_post.md  markdown_overview.md  ninth_post.md  second_post.md  seventh_post.md  sixth_post.md  some-article.md  some-other-article.md  tenth_post.md  third_post.md
docs/website/themes/even/content/pages/: about.md
docs/website/themes/even/sass/: _animations.scss  _base.scss  _header.scss  _main.scss  _mobile.scss  _slideout.scss  _toc.scss  site.scss
docs/website/themes/even/static/: even.js
docs/website/themes/even/templates/: about.html  index.html  page.html  post_macros.html
docs/website/themes/even/templates/categories/: list.html
docs/website/themes/even/templates/shortcodes/: katex.html
docs/website/themes/even/templates/tags/: list.html  single.html
docs/website/themes/hyde/: README.md  config.toml  theme.toml
docs/website/themes/hyde/sass/: poole.scss
docs/website/themes/hyde/templates/: 404.html  index.html  page-nodate.html  page.html  section-nodate.html
examples/: .async.rs.swp  async.rs  basic.rs  bitset.rs  cluster_bomb.rs  common.rs  derive.rs  external.rs  full.rs  lend_join.rs  messages.rs  meta.rs  ordered_track.rs  saveload.rs  serialize.rs  slices.rs  sys.rs  system_derive_simple.rs  system_derive_with_components.rs  track.rs  tracked.rs
scripts/: build-netlify.sh  kcov.sh
specs/: .gitignore  Cargo.toml
specs-derive/: Cargo.toml  LICENSE-MIT
specs-derive/src/: impl_saveload.rs  impl_specs_system.rs  lib.rs
specs-derive/tests/: default.rs  saveload.rs
specs/examples/: serialize.rs
specs/src/: group.rs  lib.rs  world.rs
specs/src/storage/: data.rs
specs_derive/: Cargo.toml  README.md
specs_derive/examples/: derive.rs
specs_derive/src/: component.rs  component_group.rs  group.rs  lib.rs
src/: bitset.rs  changeset.rs  common.rs  error.rs  gate.rs  group.rs  join.rs  lib.rs  planner.rs  prelude.rs  storage.rs  world.rs
src/join/: bit_and.rs  lend_join.rs  maybe.rs  mod.rs  par_join.rs
src/saveload/: de.rs  details.rs  macros.rs  marker.rs  mod.rs  ser.rs  storages.rs  tests.rs  uuid.rs
src/storage/: .track.rs.swp  check.rs  data.rs  deferred.rs  deref_flagged.rs  deref_flagged_gen.rs  drain.rs  entry.rs  flagged.rs  generic.rs  meta.rs  mod.rs  restrict.rs  ser.rs  side.rs  sorted.rs  split_flagged.rs  storages.rs  sync_unsafe_cell.rs  tests.rs  track.rs  tracked.rs
src/world/: comp.rs  entity.rs  lazy.rs  mod.rs  tests.rs  world_ext.rs
tests/: ct.rs  no_parallel.rs  saveload.rs  saveload_macro.rs  tests.rs  tracked.rs
tests/compile-fail/: only_parallel.rs
