[package]
name = "specs"
version = "0.18.0"
description = """
Specs is an Entity-Component-System library written in Rust.
"""
documentation = "https://docs.rs/specs/"
repository = "https://github.com/slide-rs/specs"
homepage = "https://specs.amethyst.rs"
readme = "README.md"
keywords = ["gamedev", "ecs", "entity", "component"]
categories = ["concurrency", "game-engines"]
license = "MIT OR Apache-2.0"
authors = ["slide-rs hackers"]
exclude = ["bors.toml", ".travis.yml"]
edition = "2018"

# the `storage_cmp` and `storage_sparse` benches are called from `benches_main`
autobenches = false

[badges]
travis-ci = { repository = "slide-rs/specs" }

[dependencies]
crossbeam-queue = "0.3"
hashbrown = "0.12"
hibitset = { version = "0.6.3", default-features = false }
log = "0.4.8"
shred = { version = "0.13", default-features = false }
shrev = "1.1.1"
tuple_utils = "0.4.0"

rayon = { version = "1.5.1", optional = true }
serde = { version = "1.0.104", optional = true, features = ["serde_derive"] }
specs-derive = { version = "0.4.1", path = "specs-derive", optional = true }
uuid = { version = "1.0", optional = true, features = ["v4", "serde"] }

[features]
default = ["parallel"]
parallel = ["rayon", "shred/parallel", "hibitset/parallel"]
uuid_entity = ["uuid", "serde"]
stdweb = ["uuid/js"]
storage-event-control = []
derive = ["shred-derive", "specs-derive"]
nightly = []

shred-derive = ["shred/shred-derive"]

[package.metadata.docs.rs]
features = ["parallel", "serde", "shred-derive", "specs-derive", "uuid_entity", "storage-event-control"]

[dev-dependencies]
nalgebra = "0.31"
criterion = "0.3.1"
ron = "0.7.1"
rand = "0.8"
serde_json = "1.0.48"
shred = { version = "0.13.0", default-features = false, features = ["shred-derive"] }
specs-derive = { path = "specs-derive", version = "0.4.1" }

[[example]]
name = "basic"

[[example]]
name = "full"

[[example]]
name = "cluster_bomb"

[[example]]
name = "bitset"

[[example]]
name = "track"

[[example]]
name = "ordered_track"

[[example]]
name = "saveload"
required-features = ["serde"]

[[bench]]
name = "benches_main"
harness = false

[[bench]]
name = "parallel"

[[bench]]
name = "world"
harness = false

[[bench]]
name = "big_or_small"

[workspace]
members = ["specs-derive"]
