[package]
name = "specs-derive"
version = "0.4.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
description = "Custom derive macro for Specs components"
documentation = "https://docs.rs/specs-derive"
repository = "https://github.com/slide-rs/specs/tree/master/specs-derive"
keywords = ["gamedev", "parallel", "specs", "ecs", "derive"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"

[lib]
proc-macro = true
