[package]
name = "specs_derive"
version = "0.1.0"
authors = ["Aceeri <conmcclusk@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
specs = { path = "../specs", version = "0.9.1" }
syn = "0.11.10"
quote = "0.3.15"
serde = { version = "0.9.11", optional = true }

[features]
default = []
serialize = ["serde"]
