[package]
name = "specs_derive"
version = "0.1.0"
authors = ["Aceeri <conmcclusk@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
specs = { path = "../specs", version = "0.9.1" }
syn = "0.11.10"
quote = "0.3.15"
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_derive = "1.0"
serde_json = "1.0"

[features]
default = []
serialize = ["serde", "specs/serialize"]
